# internal/controller/sqlinject.go
@@ -4,7 +4,7 @@ import (
 	"GoWAFer/internal/model"
 	"GoWAFer/internal/service"
 	"GoWAFer/pkg/pagination"
-	"GoWAFer/pkg/utils/api_handler"
+	"GoWAFer/pkg/utils/api_helper"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -23,13 +23,13 @@ func NewSqlInjectController(sqlInjectService *service.SqlInjectService) *SqlInje
 // @Tags SQlInject
 // @Accept json
 // @Product json
-// @Param api_handler.CreateSqlInjectRequest body api_handler.CreateSqlInjectRequest true "请求体"
-// @Success 200 {object} api_handler.Response
+// @Param api_helper.CreateSqlInjectRequest body api_helper.CreateSqlInjectRequest true "请求体"
+// @Success 200 {object} api_helper.Response
 // @Router /waf/api/v1/sqlInject [post]
 func (c *SqlInjectController) CreateRule(g *gin.Context) {
-	var req api_handler.CreateSqlInjectRequest
+	var req api_helper.CreateSqlInjectRequest
 	if err := g.ShouldBindJSON(&req); err != nil {
-		api_handler.ClientErrorHandler(g, 40001)
+		api_helper.ClientErrorHandler(g, 40001)
 		return
 	}
 
@@ -37,11 +37,11 @@ func (c *SqlInjectController) CreateRule(g *gin.Context) {
 
 	err := c.sqlInjectService.CreateRule(&newRule)
 	if err != nil {
-		api_handler.InternalErrorHandler(g, err)
+		api_helper.InternalErrorHandler(g, err)
 		return
 	}
 
-	g.JSON(http.StatusOK, api_handler.Response{Status: 0, Message: "操作成功！"})
+	g.JSON(http.StatusOK, api_helper.Response{Status: 0, Msg: "操作成功！"})
 }
 
 // FindPaginatedSqlInject godoc
@@ -52,14 +52,14 @@ func (c *SqlInjectController) CreateRule(g *gin.Context) {
 // @Param keywords query string false "关键词"
 // @Param page query int false "页码"
 // @Param perPage query int false "页面大小"
-// @Success 200 {object} api_handler.Response
+// @Success 200 {object} api_helper.Response
 // @Router /waf/api/v1/sqlInject [get]
 func (c *SqlInjectController) FindPaginatedSqlInject(g *gin.Context) {
 	// 通过请求实例化分页结构体
 	page := pagination.NewFromRequest(g)
 	keyword := g.Query("keywords")
 	page = c.sqlInjectService.FindPaginatedRules(page, keyword)
-	g.JSON(http.StatusOK, api_handler.Response{Status: 0, Message: "success", Data: page})
+	g.JSON(http.StatusOK, api_helper.Response{Status: 0, Msg: "success", Data: page})
 }
 
 // UpdateRule godoc
@@ -68,34 +68,34 @@ func (c *SqlInjectController) FindPaginatedSqlInject(g *gin.Context) {
 // @Tags SQlInject
 // @Produce json
 // @Param id path int true "主键ID"
-// @Param api_handler.CreateSqlInjectRequest body api_handler.CreateSqlInjectRequest true "请求体"
-// @Success 200 {object} api_handler.Response
+// @Param api_helper.CreateSqlInjectRequest body api_helper.CreateSqlInjectRequest true "请求体"
+// @Success 200 {object} api_helper.Response
 // @Router /waf/api/v1/sqlInject/{id} [patch]
 func (c *SqlInjectController) UpdateRule(g *gin.Context) {
-	var req api_handler.CreateSqlInjectRequest
+	var req api_helper.CreateSqlInjectRequest
 	if err := g.ShouldBindJSON(&req); err != nil {
-		api_handler.ClientErrorHandler(g, 40001)
+		api_helper.ClientErrorHandler(g, 40001)
 		return
 	}
 
-	id, err := api_handler.GetUintParamFromPath(g, "id")
+	id, err := api_helper.GetUintParamFromPath(g, "id")
 	if err != nil {
-		api_handler.ClientErrorHandler(g, 40004)
+		api_helper.ClientErrorHandler(g, 40004)
 		return
 	}
 	current, err := c.sqlInjectService.FindRuleByID(id)
 	if err != nil {
-		api_handler.ClientErrorHandler(g, 40005)
+		api_helper.ClientErrorHandler(g, 40005)
 		return
 	}
 	current.Rule = req.Rule
 	err = c.sqlInjectService.UpdateRule(current)
 	if err != nil {
-		api_handler.InternalErrorHandler(g, err)
+		api_helper.InternalErrorHandler(g, err)
 		return
 	}
 
-	g.JSON(http.StatusOK, api_handler.Response{Status: 0, Message: "操作成功！"})
+	g.JSON(http.StatusOK, api_helper.Response{Status: 0, Msg: "操作成功！"})
 }
 
 // DeleteRule godoc
@@ -104,24 +104,24 @@ func (c *SqlInjectController) UpdateRule(g *gin.Context) {
 // @Tags SQlInject
 // @Produce json
 // @Param id path int true "主键ID"
-// @Success 200 {object} api_handler.Response
+// @Success 200 {object} api_helper.Response
 // @Router /waf/api/v1/sqlInject/{id} [delete]
 func (c *SqlInjectController) DeleteRule(g *gin.Context) {
-	id, err := api_handler.GetUintParamFromPath(g, "id")
+	id, err := api_helper.GetUintParamFromPath(g, "id")
 	if err != nil {
-		api_handler.ClientErrorHandler(g, 40004)
+		api_helper.ClientErrorHandler(g, 40004)
 		return
 	}
 	current, err := c.sqlInjectService.FindRuleByID(id)
 	if err != nil {
-		api_handler.ClientErrorHandler(g, 40005)
+		api_helper.ClientErrorHandler(g, 40005)
 		return
 	}
 	err = c.sqlInjectService.DeleteRule(current)
 	if err != nil {
-		api_handler.InternalErrorHandler(g, err)
+		api_helper.InternalErrorHandler(g, err)
 		return
 	}
 
-	g.JSON(http.StatusOK, api_handler.Response{Status: 0, Message: "操作成功！"})
+	g.JSON(http.StatusOK, api_helper.Response{Status: 0, Msg: "操作成功！"})
 }
